--- a/ferreteria-sistema/src/main/resources/templates/dashboard/index.html
+++ b/ferreteria-sistema/src/main/resources/templates/dashboard/index.html
@@ -112,6 +112,7 @@
         </main>
     </div>
 
+    <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/dashboard.js}"></script>
 </body>
 </html>
